añadiendo nueva funcionalidad y perfilando las nuevas fases
